Allow multiple, configurable reporters
Start to try and unpick reporter so it can handle multiple outputs

Console reporter ~66% done

Refactor mostly there

Backwards Comaptibility

config "reporter" property to be deprecated in the future

Attempting to fix

Allow multiple reporters

--- a/examples/basic/config.json
+++ b/examples/basic/config.json
@@ -5,6 +5,7 @@
   "resultsDir": "results",
   "reporter": "moonraker",
   "threads": 1,
+  "icinga": true,
 
   "testTimeout": 60000,
   "elementTimeout": 5000,
