Console reporter ~66% done

--- a/examples/basic/config.json
+++ b/examples/basic/config.json
@@ -4,6 +4,7 @@
   "stepsDir": "tests/steps",
   "resultsDir": "results",
   "reporter": "moonraker",
+  "reporters": ["console"],
   "threads": 1,
 
   "testTimeout": 60000,
