--- a/examples/basic/config.json
+++ b/examples/basic/config.json
@@ -4,7 +4,7 @@
   "stepsDir": "tests/steps",
   "resultsDir": "results",
   "reporter": "moonraker",
-  "reporters": ["console"],
+  "reporters": ["console", "html"],
   "threads": 1,
 
   "testTimeout": 60000,
