Putting back to latest

--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -2,7 +2,7 @@
   "name": "MyTests",
   "version": "0.0.1",
   "dependencies": {
-    "moonraker": "file:../../"
+    "moonraker": "latest"
   },
   "scripts": {
     "test": "node node_modules/moonraker/bin/moonraker.js"
